[package]
name = "activity_vault"
version = "0.1.0"
edition = "2021"
keywords = ["window", "active", "current", "position", "title"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "appkit-nsworkspace-bindings",
]

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",    
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus"
]